--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,26 @@
 @media (min-width: 600px) {
-  body .d-md-block {
-    display: block !important;
-  }
+    body .d-md-block {
+        display: block !important;
+    }
+}
+@media (min-width: 972px) {
+    body .d-lg-block {
+        display: block !important;
+    }
+}
+.accordion__complex-row .row.even {
+    background: #f5f5f5;
+}
+.accordion__complex-row .row.odd {
+    background: #fff;
 }
 
-@media (min-width: 972px) {
-  body .d-lg-block {
-    display: block !important;
-  }
+.compare .accordion__content-container--visible.accordion__content-container--open-ends {
+    padding-top: 0;
+}
+.compare .accordion__complex-row {
+    padding-top: 5px;
+}
+.compare .accordion__link-title--active:after {
+    height: 0;
 }
